--- a/src/launcheruniversae/MainWindow.form
+++ b/src/launcheruniversae/MainWindow.form
@@ -57,7 +57,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="430" y="280" width="1430" height="730"/>
+          <AbsoluteConstraints x="410" y="240" width="1470" height="800"/>
         </Constraint>
       </Constraints>
 
@@ -110,6 +110,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop2MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop3">
           <Properties>
@@ -122,6 +125,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop3MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop4">
           <Properties>
@@ -134,6 +140,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop4MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop5">
           <Properties>
@@ -146,6 +155,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop5MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop6">
           <Properties>
@@ -158,6 +170,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop6MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop7">
           <Properties>
@@ -170,6 +185,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop7MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop8">
           <Properties>
@@ -182,6 +200,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop8MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop9">
           <Properties>
@@ -194,6 +215,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop9MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop10">
           <Properties>
@@ -206,6 +230,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop10MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop11">
           <Properties>
@@ -218,6 +245,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop11MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop12">
           <Properties>
@@ -230,6 +260,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop12MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop13">
           <Properties>
@@ -242,6 +275,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop13MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="icoTop14">
           <Properties>
@@ -254,6 +290,9 @@
               <Dimension value="[80, 80]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="icoTop14MouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
