--- a/src/launcheruniversae/PageBotones.form
+++ b/src/launcheruniversae/PageBotones.form
@@ -25,17 +25,17 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="content" alignment="0" pref="1550" max="32767" attributes="0"/>
+          <Component id="contenedorPagianBotones" alignment="0" pref="1550" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="content" alignment="0" pref="870" max="32767" attributes="0"/>
+          <Component id="contenedorPagianBotones" alignment="0" pref="870" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="content">
+    <Container class="javax.swing.JPanel" name="contenedorPagianBotones">
       <Properties>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Default Cursor"/>
